@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: interp.test,v 1.21 2003/05/05 16:48:54 dkf Exp $
+# RCS: @(#) $Id: interp.test,v 1.22 2003/05/12 22:44:24 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2.1
@@ -2918,6 +2918,15 @@ test interp-32.1 { parent's working directory should
     expr {[string equal $parent $child] ? 1 :
              "\{$parent\} != \{$child\}"}
 } 1
+
+test interp-33.1 {refCounting for target words of alias [Bug 730244]} {
+    # This test will panic if Bug 730244 is not fixed.
+    interp create i
+    proc test args {return $args}
+    trace add execution test enter {interp alias i alias {} ;#}
+    interp alias i alias {} test this
+    i eval alias 
+} this
 
 # cleanup
 foreach i [interp slaves] {
